# Pomodoro

./: .dev.env  .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  dependecy.py  docker-compose.test.yml  docker-compose.yml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  settings.py
.github/workflows/: github.ci.yml
alembic/: env.py
alembic/versions/: 1ff0f89372ac_extend_user_profile.py  222765e1990f_user_init.py  23f0f0cfd247_init.py  3bf1e144213a_yandex_access_token.py  4c290ba9f755_user_id_in_tasks.py  6ba7788a95f9_category_type.py  b863de82ee3f_access_token.py  ee811113b4f0_ref_user_profile.py  ff902b08f508_access_token_nullable.py
app/: consumer.py  dependecy.py  exception.py  main.py  settings.py
app/broker/: consumer.py  producer.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/models/: __init__.py  tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  auth.py  task.py  user.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  (+1 more)
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py  settings.py
worker/: celery.py
workflows/: .github.ci.yml
(+14 files in other folders)
