[tool.poetry]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = ["Said Magomedow <saidmagom@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^5.0.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
gunicorn = "^21.2.0"
pytest = {extras = ["async"], version = "^8.2.0"}
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.1"
twisted = "^24.3.0"
pytest-factoryboy = "^2.7.0"
celery = "^5.4.0"
flower = "^2.0.1"
amqp = "^5.2.0"
aio-pika = "^9.4.2"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
